@@ -3,28 +3,28 @@ Hash: SHA256
 
 AUX autopep8-0.5.2-issue-10.patch 837 SHA256 ec7a48d8163113d0b034c388d12ced60299019b7502d9d4a8561bfbc7ff54908 SHA512 9a30714208645bd4697d5403850f6fec2ca6b5169b406a1c22aa8565f75036190bb6d15e6d19c77540f1b3319c0ec4967646a1c1af3ca34039bc34cca6537b76 WHIRLPOOL 8f3144639993b1525d7f36417d2e87e82fe97a21d420431670840d4521da0ba760b2d491e69f0f83c9aff07fa711fb9b67c53fb1e0d7bc2cdc87b01f2cf47dff
 DIST autopep8-0.5.2.tar.gz 10049 SHA256 a9a808bac49605036bdeaa4bf5b50a9bbf87088a54b9a2e54e18c85abcecb70f SHA512 9d27a9b2c7cf90a7ea420732ac13675c6bc93435d9d9dc4e437e3e2e121d4b2931b995da77d751e2dbcf4c2c5379fda6c4c3c0f6cc222b461d4daa95e9ec2564 WHIRLPOOL 5b4f6ca08695da516f6579399de1decb3a1be6b2520a636812f1b68cb6ee7e05cb546fe7537513deb3f9a3f914808ffeaa956d1daa2c4e0bcf14f22071e9e7c8
-DIST autopep8-0.9.3.tar.gz 54727 SHA256 3d4ead82fb5954ceb4f548bddbdacb7bf04043062cd9153807bfe2b0fa393fb6 SHA512 6739ca5bf0ba716af3be1ecfc35b11a96483962367642b6751cde153c500ea36cc901be76da6b033bf6141c28a87ec75a4f6f568bb77a3278d8e7f1fe92b0941 WHIRLPOOL 31f9e38da6be88f1385b4d42aa50b646cd1f52aff6e32ec3615a731899caf823f3abf37004fcfc95c6fbfa4997aea009722646221799e1b2903d1fe51357a9d1
 DIST autopep8-0.9.4.tar.gz 70382 SHA256 4f1204c319eebdcc761131f832fcf38131f955a7db456a094942086c0d6ede10 SHA512 2704ec20927b77e18c273513d4a74a46196d9e5df809da833b814def3efab5afe105f9519c76d6c1fff2f7de8d9c533fde67192f2a56d29480aa5a32ff0f3da2 WHIRLPOOL 4f117c759a26e4c78395a456dbaeed057efa0a353dc9f16935c9391c36ea4a47085002341f63db056ab0d558ae9e3c37c15d14a6c0aef925f07657979d633352
+DIST autopep8-0.9.5.tar.gz 71000 SHA256 d6610d683d02a1a487cc3f7d8ef6dd8e436c897f97b64ea2dcfc384767429670 SHA512 daef04cf3d2085fd59af3d8603e14e36e8d2673b783055971212438014b74e6732d8309a870285a2a8f8915cffdf27bd63631ddf6dfd1bb07c2e19b92ed32dae WHIRLPOOL 40d5d0b07c88a85075fed6742528f277d0592f88849bc9d1d1816bcc97c0744726570c8af44f0b1ed3b2840b73286496fe969dc7a0b9020a9f9f87d1f771d1e0
 EBUILD autopep8-0.5.2-r1.ebuild 915 SHA256 5403942b748a78ec6c9dece2168ed921930073fa174df92a93fd0f1a931464a0 SHA512 7cdf39b60704c44d4231e15b1d47b1fbed03470601462faa6280c8469fe76508e166776ab4ef3b1ecce2b2053f3b68eaf3058c42d087d66d22132c0214030bdc WHIRLPOOL f1d8663eaeb6312a382115fba3b1690a61db6c030c9a97509b13cbeef59c469f470e16357c52abacf10d0eac56b59ed342895b80c287fa3756c1358cd20094eb
-EBUILD autopep8-0.9.3.ebuild 1198 SHA256 8d0e4fde7e1edb4c2373832cffa6eda865be49e0f424da497b6bf16183992e50 SHA512 7a7f3c0e5cce3d0304c884634964e9bb7435b5b70f2c54963b95d10cb03ecbe22f6bde7731b3e7a400d811473dc12b641c31fcdee50bb433eaeac81eaacf691e WHIRLPOOL 480b738e3c7896a6003fa8fb95a73bb5c551786141ce35f933bb1e65ee9220962657eba026ac332427ebf4e5a645fac7d82ba97d83ce6ce4675add8f431a2980
 EBUILD autopep8-0.9.4.ebuild 1202 SHA256 42e26180974d53a37c4bead9c4191d50b2b7e9b91dc92e81584064ba7983e6c8 SHA512 d4d44f7997ed847b20d25a230a4fbf77c3e2b0d4ab2b78178905895ad88d55d8b8c135fa2d2ca9f94ae4e68df4f18f09dad7d0366b2494c3000b2ce9b9a22d3c WHIRLPOOL 2b77a81818b2602c8a84e0b4beb020c1b8828dc48d17e29f82807c12f3399d6784e4d8efbbc89b342bd1f9eb20e909d3bc525b49c84ed95b74a41f9fd01711ba
+EBUILD autopep8-0.9.5.ebuild 1202 SHA256 21c32378f819794aab6a7e4001a48b0925c485434de819cf66110c31d1afb005 SHA512 8792b186ce07b7a91a032c4212c40fd469f26c39468ca29527aeb362a8c9c2fc51a3fcb1b6cdab5be77feccfab01ff4b4c8275c813e3b7dd9603545b18940bd8 WHIRLPOOL 84b100a8017b4bd8bc5c2c3d3cf0e0ad81a8d760ffe5fc5c97a55ed9085aca2798d079b50420bd8e6cbabfd422fc1c5bc9d8c391bad249633efe3a9026d76927
 EBUILD autopep8-9999.ebuild 739 SHA256 41d13b61615d7a393cc02f9dd0e26bcb9ce0495558898ad000be652f9c9536ed SHA512 31504fab6608fb8bb8040c4896f0aa74a82f95bfaa3e0b8d32e406a2183de9969d96c4548046523ac13eac4ddcebf3043397c661e10f9e825fc9e7db838c4c64 WHIRLPOOL b9ad1dc2ccf219be6e4d5d1ce8f28b29f14e49138f7097c15784347a00703bd6988479867de73d83929a4f318ed0876ce5150a9312e175dc932aaeb3b0129728
-MISC ChangeLog 6087 SHA256 2bede0436aa42203e940a5536d8494b5239312679a6d3a0e764dff9233c51905 SHA512 c383694a0206e77f2720eb844fc10e3ae655f2688b5a4235bb75ae2359264ac83099d344ea9129798e63dc61e8ef092d6949b6e70bc0606509a4483ac65cf05d WHIRLPOOL 46ac201b8fada23690fd0a7bbabdf5f105f69236f5bb3814276e566627e08a697ce82c6a2b6261e06b6a59e83aa6ace7b08a0791eafd2f337596aae784301266
+MISC ChangeLog 6248 SHA256 7702edeb0ae981a6fc6cd206ecabbcce076668d01467df3a0be25ca78e322c36 SHA512 4a3e6d44173441102ae2c12cc7157fc85be8c5843afc5301cf4decf3812b95d622f8b2844d0576f61228c5025c96de3f2e1b764d9b411abb2b9756fa1c54ed0b WHIRLPOOL d06e285316b025cd44ecdd4152d42fca56325807409c2b7b5cb915ab7a06e16ebf15b7fb755f370b120dfb335868131357e9620981772a2ee0654a3b6b5208c2
 MISC metadata.xml 530 SHA256 a2f56d83d1c4bdf0768bb33384e0e75d633daf05eecf8f6f2e9bac8fa51345b2 SHA512 9c477975be3c9f8f6ce59b1b37406b2606b598bdbdd16ad4e3afaa8d5adc696047cf8001344afe209f8cea389a29dad7d62832dde6ec9a552568c33c202522e8 WHIRLPOOL e4263d8dbb41d74fd0a01de118a594002120d36ee9abb2b1ea183145dabd28845f9da74e5c11e1cfa66c4bd2c957fe9fdda2f0cce00c42604f15d08a6b93ea1f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSLaE4AAoJEF0huFKJUZL51DMP+wds96AgewWBoXQJH+IMrL/o
-vACLt9JBW1vx3854KKiSARGgVz/GHz/tJJ3+kTCMGIF2kSM7H3MJuTCmqxJFpGRR
-rP1xWgzZP50EVabb9R3nzwVYfJc8IaUpvdAG1+ctLx3NL2o1KmED2ifhRMAVtMyi
-wGwXk+PxXbr84lQ9Brw+4fuNp9GNjhlBaFNImerDfFAibSeY4L8EaMPo6Zqh4wKl
-UNlsYPTqpT6TjWSRb43EFVW9Vn0gVN/x3s05YDLREA0py9HAvp99YvThIYknXhM1
-KL25hhHrTQHUtvV8r6iVJKgS53nK8CSBfFC66tm9DmGlWS29eRyYIKflvaTFX/Gt
-aiMUmZA9jKvPNlg7mAeD8gl7L+ADDe2a7Xxira3D97oo9F9ar1Xw4QcdRX8G1zU8
-CVlk6eSEur0iVmMzJtraCxGAlANqps1ydyTIt+Cm8Rj4XhW7tlBdLoMyevMxWIcm
-yju619gbknuiSWunTjN/1bbbV92oL34gtQ6h3poVuDNixNdOuap1RHwPMr500ilN
-qgRjONn/f2BkGTbXJZsAt6MiGbWKMoDhLcVSR+2litRRcw2n6uLfMkNP3wawQztx
-iHVimzW0MLtzphkP5jCUaRu2GAdhj4ReksOQs3RGBoxxPGBcoAMDrRuOPRsVcFEX
-0WaRfOyU4b3XXUYOAylO
-=o/R7
+iQIcBAEBCAAGBQJSZ9APAAoJEF0huFKJUZL5r40P/Aj/uvjIgS0b2dZQPLxhahUl
+oX9HLkWDRKftSn/cWDfwf1g/I9avRMRHJLTuaHqs6YlQw8fP2Oy+ZpI/dxCJTTiK
+is1Njq+R45SKpfIrlCgcfYz6OpHp/ldMCUcXC6iiHrTusPVb2B8xJ26SvOk5o25Y
+OpOzZnZORredeSJiYQD2lUx/grCgVPBT3moEVt7sHmcqlNqhV8/six+r58i7AtQA
+VSXLBsp99mfmRIp3BC/yiulcqeUWQ4WPc0bb9urPXgCPVmJ15Ypiv+mwFJB3U5Dp
+hLLLsqmFRhUl61f7gcO8SE/Ut1Vp/a1qtyeOOK+TFs3lRGEJcR3i5oiLSjgDowzV
+Qu+8r+uQWPcQ/vfMxGqLK9UbDhvfC6mYec3uhjcrJYQV5y4BYoSJJzARcfhFx93X
+2KXz/wMtPlIeaPWlLZaSUqxlSVMzF8lvXxoJZahGbcedQUNyzrOczLbFc7muZcWb
+Q2sdBwC5dlvLCjvsTqgB3lzOsOlJJMVtkY76nKI4CmLSG7StqysWZ1aHcCvWDGuE
+fIu1ezo+GkPsqRe4VdmusykaT6YOzithGyTk1HeGVFbqUQziQhtA+fR6sGme/LOx
+KSsCHZo2AUTVyiNRE7wK0jTlos66DMkCkK/OmGibISMlFC3aCgDUrpv8VnGgPpg4
+zB2uvwwhYLgVpOlnkR6i
+=OgBP
 -----END PGP SIGNATURE-----
