@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/autopep8-0.9.3.ebuild,v 1.2 2013/09/05 18:46:12 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/autopep8-0.9.5.ebuild,v 1.1 2013/10/23 13:32:57 xarthisius Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
