@@ -5,32 +5,28 @@ AUX qrencode-3.1.1-pngregenfix.patch 1721 SHA256 1bd7ae459ecac9a25f568fdcd58b1b1
 AUX qrencode-3.2.0-pngregenfix.patch 1339 SHA256 05733f20c687ce0421f8207eb9d1e6902eb3014d07f4f0ffc51d4439b5a067e0 SHA512 3155814da1abcbf0ad3c144e3470b5b2ae9e93d9d1b1df2437dfdf16b31aaa9efb3642ceedb6facdc640685ddc41cfddf2e7266994d6ad5f1fa0f24e1473a89a WHIRLPOOL 7e42db9eec2d369ac40360e46ab54eb0f74761103cccf43fe6cbbb94feb379812a65837ccd96e48f6c9c2a733698bf686b9910b1dc78b82ad2ebc7fc51d9b714
 DIST qrencode-3.3.0.tar.bz2 365098 SHA256 55f0803208bd952b50a56a2be880fc7a76f2d214c96fae48a929599694cbea51 SHA512 4e7ad0fda1a34c47f3b93c541e2bdcfc1f71ad911719e202e2d5590826f4107a9c3e7a5b4a23c83364577453665c83287135bc1d3f8a123c652e33691d31bbff WHIRLPOOL f58e6b8f074c2f3d25fe970b093bd566c4fe64401e21b7d8dbc284c7ca1443e529822ce04b2e9c70b9e08dd58a1360af7cda9f12012b4aafb05d697ef738e680
 DIST qrencode-3.3.1.tar.bz2 365432 SHA256 7ad730379a9352051940c3be58cf4c6d548525f378551cb33e9c709c419adb9b SHA512 28eddb96264faefc3ae1e8c45961b685ee76e061f3e8d201661f572aa09661573afdb76596c3c41d6d94bd381898a8d22338c6cee3ffd3fc8fe4c78715922873 WHIRLPOOL b95c7c18b4e2e766ee43c1028c4f1255890a4d56304e3fd372733a1f908d34a5e9793f09b515e49c4f547aaf5f5aa358867f17d717d81bcd41f45cd4f28a2d3c
-DIST qrencode-3.4.1.tar.bz2 375563 SHA256 8b7a5a5fc7389a5bcaec4f2ad814c2562424991ab908067d00f8e0868d2aa5f0 SHA512 5829697c5a7d137c3918dc0c0ec8505ad7fdc6deb7207d7fa8feb3856dedf1db5ec6de4a90c19a4a14f369a7cd513e15147c9b20d08bfb867a02b0eb5325d6ca WHIRLPOOL c00340ee49171d55dd2481e50ca9c8254eac4f0210656deac16d2f2602627e6a9bc1c30db67dae6a3841f0a765cf2bc5463e8d6c75f6029c5596c9b30d15c925
-DIST qrencode-3.4.2.tar.bz2 375876 SHA256 fc492a506a1460c1ce850ff6137db55cb2e3d466f4c559108aae3a96d623c1b1 SHA512 e7845c237cc76a25f67ca9b1d76431e9ae7b0f1b7711dbff3a2cd771b7a37c283249c651aafb2a7d62069a377745ce98abee651059a95c01635ebe00981de377 WHIRLPOOL 0adedff2e6cc7fa3949678a647b37a976b4679910f792e25cdc2114dc1fab95741c87cc02954c1fe7dbf02fb34302e24eaf397d68d275fcc074aa3e55f8ba2e4
 DIST qrencode-3.4.3.tar.bz2 370709 SHA256 dfd71487513c871bad485806bfd1fdb304dedc84d2b01a8fb8e0940b50597a98 SHA512 eba9d6220d0d5e08da614bd05904a08e11c45b7b293c45aa8417345c3267eae8790e83d9338b6cbadbd3fe15ac4579e0fb9e4e23b4f7e1d56e5fb3729afb9cf5 WHIRLPOOL 02b60e306fc2365de0be0f02619f1e5a3dcf783024845872d23940a4b720bf8a2b89255e95898c2a7323a93c8f4210b4362b30c0fc2ff1ae90d4850f344bd675
 EBUILD qrencode-3.3.0.ebuild 635 SHA256 3398d0f6686a1c17b1aa623b25ccc2b7d71197ac551cb0289bcceded77a5e9d5 SHA512 e39338520ad0fff0c633dc350a7ede85a9f8c71a722b3d8ef7337046d4cddbea96ef1960ac4abdba3760dffa13bd3e1ae868e8c27fa39411d080c7881be0815c WHIRLPOOL 7807b7398ce8d3056de36e309c6beca0dc6c0432a796e06dfcb326c985a6d2ed117caec371498386c8547d64fbaff9e41a375d46dd9ae3f3fa30a75c346f7bc8
 EBUILD qrencode-3.3.1.ebuild 647 SHA256 6e76e797c123f07a7ad8cff043a69a6b6b2212397a390ce6a57875ccef099121 SHA512 bbebd867a045fe72ea5353e626aa95e7c6d6ec66e718dd7ea6e1ec412ce444b0629efadd979549d080daf2ebe18e9da7f0a521f5b15de624671ced2aa0d8b7fa WHIRLPOOL c050575dd28111625e7420bb92c19c1dfe032ff78a9b7815f1f6e55228f2e766feafe6d53462d7858caa10feb664cc58f99d40e4d16be910b6880ad17684fe37
-EBUILD qrencode-3.4.1.ebuild 642 SHA256 ce8359cf8dabd228552aa7d5208b3038eb4cb3c78220df266092054f2cb45226 SHA512 b455c87670fc02a4b81f50ba883b36e5b554cd9a103c88967206e493a0a09b2e6f4dc8d50f5d66abfd469ced15962790cb29d323b53fcfecbbb159330169784c WHIRLPOOL c571a45305985f60599f407428b7a6da0be83c5670879ebcb55302e96cabe84b75e08ea84e3e00ec9b341110037baaeb784948b5f8b3fd0351c6cdf88e9f65f2
-EBUILD qrencode-3.4.2.ebuild 644 SHA256 1c8071ce76e5aea39912143fcf668baa433a213a5777937c89a6614ed0d04f0f SHA512 fcd8b6aac96e43ade7cdb4b5b4d93ffb23c096c27fa8752ac1bfdee1dd0ff951c9cf13d6c976950f4820ee24917be63606e5379a7e20071137706682d972a502 WHIRLPOOL 4adea26795d7398e57727a7a8736ccb3597126329f9cedfeab0d339ebee338fbf9a5332704ee0aa906495778a1fe5791b88103b3b2dab9027f5ad745a0fa6442
-EBUILD qrencode-3.4.3.ebuild 644 SHA256 340984dd2538780cc1d234ad39d4d0595c6653b1ea40c56fab21818e797f775e SHA512 ee34223ca5c451495ed5253aafc534570c3288f7f1e8b8da09f1a4b9e14492a737d1f8ab046d82f6dc64b88191d93ee193ce3a4dfa5f57b17d2e360df0145806 WHIRLPOOL a1a2c3865c29b0d5b76af6736be5d4945f6cd5c4a6cb4d3082647c196a198ef67dbe3c387e95e2eb0df25250646876ed766c9a90926c327e83a4e381a288a64d
-MISC ChangeLog 4854 SHA256 da73f675677bd59fe9ca9fd147415d52c026e33c520e467aebd46235a545ee13 SHA512 42c4936c4f4953c6dda9ec390f0c9644b368782fe12afcda58d7957eda909ec852f60d07bc24ee95525928b82e43737918807eeb82c4020a34f6505484d3a08e WHIRLPOOL 6597dee45899c051ce669d6448004fb06733f98eaf7ba2e34c88e4c4d188eff48ba67b1ee45e38c4aa486d8d619a1c7e0341ff99af67b9f3b07b01f37c323b4c
+EBUILD qrencode-3.4.3.ebuild 654 SHA256 51802a37d29bfc9b537665276ab9d9d5baba28f61aa2e11706ba9046e313e904 SHA512 65525d62f53aeb5c647e64595c18dd5e6b071cf8c246590ebd9b9a09dc2b6c331f9bd41a5444c215661618341516b86e9d883c5d4b10fe8085edac884ad6fb92 WHIRLPOOL ab6e74ba36908b9ea9946d48f2c0484479b008d390285fd7f708848d15f7ceea825b057570003669e9773870d6ea3bedd36bd2623c40b4fa0945dea9bdeda0f2
+MISC ChangeLog 5119 SHA256 8ac41c658db60e9f43625af7bab14901e3c8408696b24824da00ac9c382e7df9 SHA512 9846f3de97066961e6c7033fa8be64b089f14c1f29ff2650d5e1b1cd0da95c01bec51940cd62092bf9e28a5b4217a7257f56017943d4320f054c676c05171655 WHIRLPOOL 1bdb00ca5e1ddcc7f0b7b582d17256b7eb6a8f4ed11a39eb69ac5f3d362278a93a8574d0a7f137d252e830800171fae29ac6c86c8bfe99963f79466921f7cfdc
 MISC metadata.xml 238 SHA256 f7f80370cd809d73268557e0d76fb3f8dc732b03ec3295fe301766cdff889b33 SHA512 30360b330f466cb922d411a4f30ba64a35afa8ae8d6030ee2a1f3b780f02437427bb935ce90f5e70a85e157ce0348dfc9e00052ce94e1eed85650d359152b1f7 WHIRLPOOL 3dc925bde2f5dbf8683089a5e37ed7a09657032bb5ec0caaf930154cb1b7e6b8838e5853d55fbc8ccda5e34d61dfcb3d1824b4a859baa2e0ea67faee6cf2f1d3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSFg09XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJSZ9EDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0ODVGNzIyN0VCNkRCNUU5MzkzNzY5ODAw
-MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkApHgQAKtspxDqQ+GuJYMhwGgqw3AL
-qbysvSSYywfrXWIETX01lMyG/4h6oCrvHRJxtGd7oshGbsbE0K4s7uIhOQBfsE7s
-2PXGX8zw+IvcZ/fORAI4nLvYA5pjjWvKVYnad335NdgHKYS3ngQIFrD2TE8f15We
-D0jRh8CeiHXBa0gqZLQQ6FjpTe+wNcnEXDFPoGaQ//as74uzrn/RVRc+6A24OI1f
-JUtgEoQG4lgTvQf2P66a+dqx2SstK9GC1DetMUmYInAL0SFQn3fY08R2iHwx1n05
-e7D4TSo0aiKoFCTs8389N0k/varKzHyQ0DUYS/IYA7B9zlyRxaK447Mdd2aIkHlw
-5x5i2KzTrGKFrieFaEQEdtCUJ9gzykGbfznsP44oSpWRjTpP1M5qRxZpcUnEnwDA
-EjpQa9mSch8vRgilIANGwaACfLxsl9tAR0nnTgIEjA8GkhRF7LqpX0imm4IvdK43
-859ZHiaxL+8YhwxzL5oI5hNZlaLNAqEzMKF5hCd3BbUS65chE4huu0lh6LnxQ5Cn
-zJhPhFUb9b3QxQiSfkaV56DU37/AVl/sw2OwW827gBqfnZB2h62EBaS6R9Wv+T/X
-+IokVcCckt2LlT9ByrHhux2VzhAffzVLeTtmf4X0wOKLPeUYUI67RRl+PiK9zC90
-3XmUwQyOtnsnBU0e3/CO
-=ViT3
+MTUxODYzQTY3NjUyOTAwAAoJEAFRhjpnZSkAHjEP/3eKViuhz4G0OXm16oH3v+tz
++SOirj+x5rL31/9qL9RtZoETSMdURAW0BEWpPDVPp5WCe01FfS4l8sfkVmx107r4
+HQFybb6Pu5wfbvQ1S7ejjoKUJc+ao4QvoFu13UOck6Eh5SUhDWszdh/hJ+7I6mhm
+DN3qjfOcSLKd9gx3Rz9zAASlogVSTIwD+aQZbE2vOzz2GmesE59JyJ/amn7iCG6t
+QfzF+9bVjnuInJeCYMgkXEvYETU0qIsizO2dHxDJpVswnSbIZfiwYk7Z90WsEyqW
+GXIvQIqA6TH4ZfpFNO4SFLAeUaLyO5mCUIoZNAkKpgJx9N0mnquh7m9C07COFmtD
+CgM9+qhPEZk+3qlELVuZE9zGCzqZ+jNUQBq7R8R50rbfD3ldFlfDQcdr0tRSizBl
+01DZGs0xAHnqwuOx0O1MFFiF+5AR87DkBEemWy0zvaOuiXPYBp9m1D05hY4QZFPS
+UVhjwNkB/Z4NswJ4f3ic33SnZiLndjsVOfe/C7M+xepbvMhfBxct2cMN75y1xjeI
+u+aRxE/mt1thO+1iUr6Tt0b80yTHov/AJTVY8lmqnsVxpCFEAfkOlHyUFaPu0Au4
+ziJNsKg/T+1lGlV5zbHED+fOaFj7K6XOzVzNViewLFJcG8rYKE/DbvZsfWPoxvUw
+hmA8yglKJP3qmzBd9afh
+=NlAA
 -----END PGP SIGNATURE-----
