@@ -3,10 +3,10 @@ DEPEND=media-libs/libpng virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >
 DESCRIPTION=C library for encoding data in a QR Code symbol
 EAPI=4
 HOMEPAGE=http://fukuchi.org/works/qrencode/
-KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86
+KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~x86-fbsd
 LICENSE=LGPL-2
 RDEPEND=media-libs/libpng
 SLOT=0
 SRC_URI=http://fukuchi.org/works/qrencode/qrencode-3.4.3.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	5f912199ed4fdfb0bfbde29c7ac7dbdb	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9ecc6228870993c397123c93f5100cee
+_md5_=990cf148993ca166bac24f56371d3baa
