@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/autopep8
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/ChangeLog,v 1.36 2013/09/09 10:22:07 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/autopep8/ChangeLog,v 1.37 2013/10/23 13:32:57 xarthisius Exp $
+
+*autopep8-0.9.5 (23 Oct 2013)
+
+  23 Oct 2013; Kacper Kowalik <xarthisius@gentoo.org> +autopep8-0.9.5.ebuild,
+  -autopep8-0.9.3.ebuild:
+  Version bump, drop old
 
 *autopep8-0.9.4 (09 Sep 2013)
 
